@@ -2,6 +2,7 @@ package br.com.jotape.repository.util;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.Date;
@@ -9,11 +10,7 @@ import java.util.TimeZone;
 
 public class Utils {
     public static String decodeParam(String text) {
-        try {
-            return URLDecoder.decode(text, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            return "";
-        }
+        return URLDecoder.decode(text, StandardCharsets.UTF_8);
     }
 
     public static Date convertData(String textDate, Date defaultValue) {
